--- a/app/partials/header.jade
+++ b/app/partials/header.jade
@@ -1,32 +1,24 @@
-header.header.ng-cloak(bindonce)
+header.header.ng-cloak
     nav.navbar.navbar-default(role="navigation")
         .container
             .navbar-header
                 a.navbar-brand(href="#")
                     div.stico-logo(ng-class="{'spin-logo': spinLogo}")
-                    span(bo-html="'layouts.main.site_name' | translate")
-                div.navbar-ui-status4(ng-controller="AppCacheUpdateManagerCtrl")
-                    div(ng-switch on="appCacheStatus")
-                        div(ng-switch-when="2")
-                            span Проверка обновлений...
-                        div(ng-switch-when="3")
-                            span Загрузка новой версии...
-                        div(ng-switch-when="4")
-                            span Обновление готово
+                    span {{'layouts.main.site_name' | translate}}
             div.navbar-inner
-                ul.nav.navbar-nav.navbar-right(bindonce)
+                ul.nav.navbar-nav.navbar-right
                     li(ng-class='{active: $location.path() == "/" || $routeParams.groupName}')
                         a(href='/{{lastOpenedGroup}}')
                             .visible-xs
                                 i.stico-schedule
-                            span(bo-html="'layouts.main.navigation.shedule' | translate")
+                            span {{'layouts.main.navigation.shedule' | translate}}
                     li(ng-class='{active: $location.path() == "/places"}')
                         a(href='/places')
                             .visible-xs
                                 i.stico-map
-                            span(bo-html="'layouts.main.navigation.auditoriums' | translate")
+                            span {{'layouts.main.navigation.auditoriums' | translate}}
                     li(ng-class='{active: $location.path() == "/courses"}')
                         a(href='/courses')
                             .visible-xs
                                 i.stico-spec-courses
-                            span(bo-html="'layouts.main.navigation.cources' | translate")
+                            span {{'layouts.main.navigation.cources' | translate}}
