--- a/app/styles/schedules/navigation.styl
+++ b/app/styles/schedules/navigation.styl
@@ -142,6 +142,7 @@
             margin-top: -3px;
 
         .group-name
+          line-height ($sched-nav-mobile-height - ($font-size-large - $font-size-medium))
           font-weight 500
           font-size $font-size-medium
 
