--- a/app/partials/places/schedule.jade
+++ b/app/partials/places/schedule.jade
@@ -1,40 +1,12 @@
 div(ng-controller='PlacesScheduleCtrl')
-    #schedule-greed(breakpoint="min-width: 768px", ng-init="classes=['1','2','3','4','5','6']")
-        // Three columns
-        div(ng-if="matches", ng-init="lines=[['Mon', 'Tue', 'Wed'], ['Thu', 'Fri', 'Sat']]", class="desktop")
-            div(ng-if="sched")
-                .lessons-grid(ng-repeat="line in lines")
-                    .container
-                        .row
-                            .col-sm-4(ng-repeat="dow in line")
-                                h5.lesson-cell-title(ng-class="{'current': currentDow == dow}")
-                                    span.lesson-cell-title-day {{'schedules.studies.'+dow | translate}}
-                                    div.lesson-cell-title-date {{ dowDates[dow] | date: 'd MMM' }}
-                    .lessons-row(ng-repeat="class in classes")
-                        .container
-                            .row
-                                .lesson-time-wrapper
-                                    .lesson-time(ng-class="{'current': currentClass == class && in(currentDow, line)}")
-                                        h4.lesson-time-number {{class}}
-                                        h5.lesson-time-start {{timing[class].start | minutesToHours}}
-                                .lesson-cell-wrapper.col-sm-4(ng-repeat="dow in line")
-                                    .lesson-cell(ng-class="{'current': currentDow == dow && currentClass == class}")
-                                        .arrow.arrow-up(ng-if="$routeParams.classNum == class && $routeParams.weekDay == dow")
-                                        .free-place(ng-repeat="atom in sched[dow][class]")
-                                            span {{atom.name}}
+    div(breakpoint="min-width: 768px")
+        div(ng-if="matches")
+            schedule(desktop, timing="timing", update="filterSchedule", current-date="currentDate", dow-dates="dowDates")
+            div(ng-if="sched", ng-init="classes=['1','2','3','4','5','6'];dows=['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']")
+                div(ng-repeat="dow in dows")
+                    div(ng-repeat="class in classes", move-content-to="sched-cell-{{dow}}-{{class}}", delay)
+                        .free-place(ng-repeat="atom in sched[dow][class]")
+                            span {{atom.name}}
 
-        // One column
-        div(ng-if="!matches", ng-init="lines=['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']", class="mobile")
-            div(ng-if="sched")
-                .lessons-mobile(ng-repeat="dow in lines")
-                    h5.lesson-cell-title(ng-class="{'current': currentDow == dow}")
-                        span.lesson-cell-title-day {{'schedules.studies.'+dow | translate}}
-                        div.lesson-cell-title-date {{ dowDates[dow] | date: 'd MMM' }}
-                    .lesson-row(ng-repeat="class in classes")
-                        .lesson-cell(ng-class="{'current': currentDow == dow && currentClass == class}")
-                            .lesson-time-wrapper
-                                .lesson-time(ng-class="{'current': currentDow == dow && currentClass == class}")
-                                    h4.lesson-time-number {{class}}
-                                    h5.lesson-time-start {{timing[class].start | minutesToHours}}
-                            .free-place(ng-repeat="atom in sched[dow][class]")
-                                span {{atom.name}}
+        div(ng-if="!matches")
+            schedule(mobile, timing="timing", update="filterSchedule", current-date="currentDate", dow-dates="dowDates")
