--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -1,59 +1,18 @@
 div(ng-controller='SchedulesStudiesCtrl')
-    #schedule-greed(breakpoint="min-width: 768px", class="week-{{currentParity}}", ng-init="classes=['1','2','3','4','5','6']")
-        // Three columns
-        div(ng-if="matches", ng-init="lines=[['Mon', 'Tue', 'Wed'], ['Thu', 'Fri', 'Sat']]", class="desktop")
+    div(breakpoint="min-width: 768px")
+        div(ng-if="matches")
             div(ng-include, src="'app/partials/schedules/navigation/desktop.jade'")
-            div(ng-if="sched")
-                .lessons-grid(ng-repeat="line in lines")
-                    .container
-                        .row
-                            .col-sm-4(ng-repeat="dow in line")
-                                h5.lesson-cell-title(ng-class="{'current': currentDow == dow}")
-                                    span.lesson-cell-title-day {{'schedules.studies.'+dow | translate}}
-                                    div.lesson-cell-title-date {{ dowDates[dow] | date: 'd MMM' }}
-                    .lessons-row(ng-repeat="class in classes")
-                        .container
-                            .row
-                                .lesson-time-wrapper
-                                    .lesson-time(ng-class="{'current': currentClass == class && in(currentDow, line)}")
-                                        h4.lesson-time-number {{class}}
-                                        h5.lesson-time-start {{timing[class].start | minutesToHours}}
-                                .lesson-cell-wrapper.col-sm-4(ng-repeat="dow in line")
-                                    .lesson-cell(ng-class="{'current': currentDow == dow && currentClass == class}")
-                                        .arrow.arrow-up(ng-if="$routeParams.classNum == class && $routeParams.weekDay == dow")
-                                        .lesson-atom-cell(ng-repeat="atom in sched[dow][class]",
-                                        class="lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}",
-                                        ng-click="columnIndex = $index; showDetails(dow, class, $index)")
-                                            i.stico-lection(ng-if="atom.type == 'lecture'")
-                                            span.lesson-name {{atom.subject.name}}
-                                            span.lesson-place(ng-repeat="p in atom.place") {{ p.name }}
-                        .lesson-details-container.height-transition(ng-if="$routeParams.classNum == class && in($routeParams.weekDay, line)")
-                            div(ng-include, src="'app/partials/schedules/class/regular-index.jade'")
-            .container(ng-if="!sched && updated")
-                span {{'schedules.no_schedule_with_stuff' | translate}}
-
-        // One column
-        div(ng-if="!matches", ng-init="lines=['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']", class="mobile")
-            div(ng-include, src="'app/partials/schedules/navigation/mobile.jade'")
-            div(ng-if="sched")
-                .lessons-mobile(ng-repeat="dow in lines")
-                    h5.lesson-cell-title(ng-class="{'current': currentDow == dow}")
-                        span.lesson-cell-title-day {{'schedules.studies.'+dow | translate}}
-                        div.lesson-cell-title-date {{ dowDates[dow] | date: 'd MMM' }}
-                    .lesson-row(ng-repeat="class in classes")
-                        .lesson-cell(ng-class="{'current': currentDow == dow && currentClass == class}")
-                            .lesson-time-wrapper
-                                .lesson-time(ng-class="{'current': currentDow == dow && currentClass == class}")
-                                    h4.lesson-time-number {{class}}
-                                    h5.lesson-time-start {{timing[class].start | minutesToHours}}
-                            .lesson-inside(ng-class="{'current': currentDow == dow && currentClass == class}",
-                            ng-repeat="atom in sched[dow][class]",
+            schedule(desktop, timing="timing", update="filterSchedule", current-date="currentDate", dow-dates="dowDates")
+            div(ng-if="sched", ng-init="classes=['1','2','3','4','5','6'];dows=['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']")
+                div(ng-repeat="dow in dows")
+                    div(ng-repeat="class in classes", move-content-to="sched-cell-{{dow}}-{{class}}", delay)
+                        .lesson-atom-cell(ng-repeat="atom in sched[dow][class]",
                             class="lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}",
                             ng-click="columnIndex = $index; showDetails(dow, class, $index)")
-                                i.stico-lection(ng-if="atom.type == 'lecture'")
-                                span.lesson-name {{atom.subject.name}}
-                                span.lesson-place(ng-repeat="p in atom.place") {{ p.name }}
-                        .lesson-details-container.height-transition(ng-if="$routeParams.classNum == class && $routeParams.weekDay == dow")
-                            div(ng-include, src="'app/partials/schedules/class/regular-index.jade'")
-            .container(ng-if="!sched && updated")
-                span {{'schedules.no_schedule_with_stuff' | translate}}
+                            i.stico-lection(ng-if="atom.type == 'lecture'")
+                            span.lesson-name {{atom.subject.name}}
+                            span.lesson-place(ng-repeat="p in atom.place") {{ p.name }}
+
+        div(ng-if="!matches")
+            div(ng-include, src="'app/partials/schedules/navigation/mobile.jade'")
+            schedule(mobile, timing="timing", update="filterSchedule", current-date="currentDate", dow-dates="dowDates")
