--- a/app/index.jade
+++ b/app/index.jade
@@ -1,5 +1,5 @@
 doctype
-html
+html(ng-app="app")
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
@@ -27,11 +27,13 @@ html
           enabled: true
       };
   body
-    #content
+    section(class="app")
+        h1 Brunch with Hipsters
 
     //script(type='text/javascript', src="phonegap.js")
     script(type='text/javascript', src='/js/vendor.js')
     script(type='text/javascript', src='/js/app.js')
+    script $(function(){require('initialize');})
 
     // Google Analytics
     script.
