sexy router done

--- a/app/index.jade
+++ b/app/index.jade
@@ -27,8 +27,10 @@ html(ng-app="app")
           enabled: true
       };
   body
-    section(class="app")
-        h1 Brunch with Hipsters
+    // Templates attach points
+    header
+    #content
+    footer
 
     //script(type='text/javascript', src="phonegap.js")
     script(type='text/javascript', src='/js/vendor.js')
