header created, schedule grid impl started

--- a/app/components/styles/app.styl
+++ b/app/components/styles/app.styl
@@ -23,8 +23,8 @@
 //@import "/bower_components/bootstrap-stylus/stylus/dropdowns"
 //@import "/bower_components/bootstrap-stylus/stylus/button-groups"
 //@import "/bower_components/bootstrap-stylus/stylus/input-groups"
-@import "/bower_components/bootstrap-stylus/stylus/navs"
-@import "/bower_components/bootstrap-stylus/stylus/navbar"
+//@import "/bower_components/bootstrap-stylus/stylus/navs"
+//@import "/bower_components/bootstrap-stylus/stylus/navbar"
 //@import "/bower_components/bootstrap-stylus/stylus/breadcrumbs"
 //@import "/bower_components/bootstrap-stylus/stylus/pagination"
 //@import "/bower_components/bootstrap-stylus/stylus/pager"
