--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -4,7 +4,9 @@
 // Custom desktop navigation
 header
   user-select(none)
-  padding-top: 10px
+  padding-top 10px
+  padding-bottom 20px
+
   nav
     border 0 !important
     height $navbar-height
@@ -63,16 +65,7 @@ header
               color $navbar-default-link-active-color
               text-decoration none
 
-    .spin-logo
-      vertical-align middle
-      display block
-      float left
-      -webkit-animation: spin 2s infinite linear;
-      -moz-animation: spin 2s infinite linear;
-      -ms-animation: spin 2s infinite linear;
-      -o-animation: spin s infinite linear;
-      animation: spin 2s infinite linear;
-
+// Smaller left/right padding of the nav items
 @media $media-max-tablet
   header
     nav
@@ -93,7 +86,7 @@ header
         span
           display none
         i
-          margin-left 7px
+          margin-left 21px
           margin-top 2px
 
       ul
