--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -1,8 +1,88 @@
 @import "../_variables"
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
 
+// Navigation
+.group-sched
+  .sched-nav
+    user-select(none)
+    position relative
+    white-space nowrap
+    padding-bottom 10px
+
+    .editor-btn
+      position absolute
+      left -30px
+
+    .back-groups-btn
+      float left
+      a
+        display block
+        font-size $font-size-large
+        text-decoration none
+        cursor pointer
+
+        .back-logo-square
+          display block
+          float left
+          background $brand-info
+          line-height 0
+          padding 5px
+
+        span
+          margin-left 10px
+
+    .sched-type-switcher
+      float left
+      border 1px solid lighten($brand-info, 80%)
+      margin-left 15px
+      border-radius $line-height-computed
+      a
+        border-radius $line-height-computed
+        display inline-block
+        padding 7px 10px
+        background #fff
+        &.current
+          background $brand-info
+          color #fff
+          text-decoration none
+          cursor default
+
+    .sched-upd-indicator
+      float left
+      font-size $font-size-medium
+      color #aaa
+      font-weight 100
+      position absolute
+      left 0
+      right 0
+      text-align center
+      z-index -1
+      line-height $sched-nav-height
+
+    .sched-week-switcher
+      float right
+      font-size $font-size-medium
+      font-weight 200
+      line-height $sched-nav-height
+      a
+        cursor pointer
+        padding 5px 0
+        text-decoration none
+        span
+          cursor pointer
+        &:first-child > span
+          margin-left 5px
+        &:last-child > span
+          margin-right 5px
+      .stico-arrow-right
+        margin-top -2px
+        vertical-align middle
+
+
+
 
 // Schedule
+/*
 #schedule-greed
   user-select(none)
 
@@ -297,3 +377,4 @@
       &:first-child
         .lesson-cell-title
           margin-top 25px
+*/
