--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -40,6 +40,7 @@ header
           position relative
           text-align center
           a
+            height $navbar-height
             text-align center
             position relative
             display block
@@ -97,12 +98,12 @@ header
         top 0
 
         li
-          width 25%
-          &.login-wrap
+          width 33.333333%
+          &.login-wrap, &.courses
             display none
           a
             margin 0
-            padding 6px 0 0 0 !important
+            padding 4px 0 0 0 !important
             font-size $font-size-small*0.9
             i
               display inline-block !important
