schedule styles created mobile navigation styles created

--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -651,8 +651,9 @@ $media-desktop ?= min-max($screen-md, $screen-md-max)
 // --------------------------------------------------
 
 // Schedule
-$sched-border-color ?= lighten($brand-primary, 93%)
-$sched-inner-border-color ?= lighten($brand-primary, 93%)
+$sched-border-color ?= lighten($brand-primary, 85%)
+$sched-inner-border-color ?= lighten($brand-primary, 90%)
 $sched-cell-hover-bg ?= lighten($brand-info-bg, 80%)
+$sched-data-height ?= 70px
 $sched-nav-height ?= 36px
 $sched-nav-mobile-height ?= 45px
