--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -5,7 +5,8 @@
 header
   user-select(none)
   padding-top 10px
-  padding-bottom 20px
+  @media $media-min-tablet
+    padding-bottom 20px
 
   nav
     border 0 !important
