--- a/app/styles/schedules/navigation.styl
+++ b/app/styles/schedules/navigation.styl
@@ -22,31 +22,81 @@
         text-decoration none
         cursor pointer
 
+        .stico-arrow-right
+          display none
+
         .back-logo-square
           display block
           float left
-          background $brand-info
-          line-height 0
-          padding 5px
+          @media $media-min-tablet
+            background $brand-info
+            padding 5px
+            line-height 0
 
         span
           margin-left 10px
 
+        @media $media-max-phone
+          font-size $font-size-medium
+          line-height $sched-nav-height
+          padding 5px 20px 5px 10px
+
+          .stico-arrow-right
+            position relative
+            display block
+            float left
+            z-index 10000
+            margin-top 5px
+          .back-logo-square i
+            display none
+          .back-logo-square:after
+            position relative
+            content 'Группы'
+            margin-left 5px
+            z-index 10000
+          span
+            color $text-color
+            background #fff
+            display block
+            position absolute
+            left 0
+            right 0
+            text-align center
+            z-index 0
+
+
     .sched-type-switcher
-      float left
-      border 1px solid lighten($brand-info, 80%)
       margin-left 15px
-      border-radius $line-height-computed
-      a
+      @media $media-max-tablet
+        font-size $font-size-medium
+      @media $media-min-desktop
+        border 1px solid lighten($brand-info, 80%)
         border-radius $line-height-computed
+      @media $media-min-tablet
+        float left
+      @media $media-max-phone
+        position relative
+        z-index 1
+        float right
+
+      a
         display inline-block
-        padding 7px 10px
         background #fff
+        @media $media-max-phone
+          padding 5px 10px 5px 20px
+        @media $media-max-tablet
+          line-height $sched-nav-height
+        @media $media-min-desktop
+          border-radius $line-height-computed
+          padding 7px 10px
         &.current
           background $brand-info
           color #fff
           text-decoration none
           cursor default
+          @media $media-max-tablet
+            display none
+
 
     .sched-upd-indicator
       float left
@@ -60,21 +110,33 @@
       z-index -1
       line-height $sched-nav-height
 
+
     .sched-week-switcher
       float right
       font-size $font-size-medium
       font-weight 200
-      line-height $sched-nav-height
+
+      @media $media-max-phone
+        display none
+
+      &.feature a
+        width 85px
       a
+        display inline-block
         cursor pointer
         padding 5px 0
         text-decoration none
+        height $sched-nav-height
         span
           cursor pointer
-        &:first-child > span
-          margin-left 5px
-        &:last-child > span
-          margin-right 5px
+        &:first-child
+          text-align left
+          &>span
+            margin-left 5px
+        &:last-child
+          text-align right
+          &>span
+            margin-right 5px
       .stico-arrow-right
         margin-top -2px
         vertical-align middle
