--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -63,6 +63,8 @@
 
     span
       display inline
+    .stico-lection
+      margin-right 5px
     .atom-places
       color $brand-info
       display inline
