added some editor stuff

--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -18,7 +18,7 @@ $gray-lighter ?=           lighten(#000, 93.5%); // #eee
 // -------------------------
 
 $brand-primary ?=         #373d3f;
-$brand-success ?=         #a2cd5c;
+$brand-success ?=         #8BB34B;
 $brand-warning ?=         #f16520;
 $brand-danger ?=          #72211f;
 $brand-info ?=            #3baba1;
@@ -248,7 +248,7 @@ $grid-float-breakpoint ?=     $screen-tablet;
 // -------------------------
 
 // Basics of a navbar
-$navbar-height ?=                    50px;
+$navbar-height ?=                    45px;
 $nav-link-padding ?=                 10px 5px;
 $nav-link-hover-bg ?=                darken($brand-info-bg, 60%);
 
