schedule editor decomposed created flexible dateTimePicker component

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -49,3 +49,4 @@
 // Bootstrap Utility classes
 @import "/bower_components/bootstrap-stylus/stylus/utilities"
 @import "/bower_components/bootstrap-stylus/stylus/responsive-utilities"
+@import "_overrides"
