--- a/app/styles/icons/plus.styl
+++ b/app/styles/icons/plus.styl
@@ -8,3 +8,7 @@
 a:hover
   .stico-plus
     background-image url(../images/brand-warning/plus.png)
+
+.current
+  .stico-plus
+    background-image url(../images/white/plus.png) !important
